adding gpu